# nmutils

./: .gitignore  GNUmakefile  NEWS.md  README.md  meson.build  meson_options.txt  nmutils.spec
etc/NetworkManager/dispatcher.d/: 08-ipv6-prefix  09-ddns  90-transmission  95-radvd-gen  96-interface-action
etc/NetworkManager/dispatcher.d/pre-down.d/: 08-ipv6-prefix  96-interface-action
etc/nmutils/: ddns-functions  dispatcher_action  general-functions  interface-dispatcher  ipv6_utils.sh
etc/systemd/system/: ddns-onboot@.service  ddns-onboot@.timer
examples/complex/: ddns-eth0-from-eth0.conf  ddns-eth0.conf  ddns-eth1-from-eth0.conf  ddns-eth1.conf  ddns-prefix-eth0.conf  ddns-prefix-eth1-from-eth0.conf  general.conf  ifa50-mylogger-eth1.conf  ipv6-prefix-eth0.conf  ipv6-prefix-eth1-from-eth0.conf  ipv6-prefix-eth2-from-eth0.conf  radvd-gen.conf  radvd.conf.templ
examples/simple/: ifa99-rsyslog-eth0.conf  ipv6-prefix-eth0.conf  radvd.conf.templ
sbin/: dhclient-ipv6-prefix  nmddns-helper
selinux/: Makefile  nmutils.fc  nmutils.te
test/: Makefile  ddns-test  ddns.txt  dhclient-prefix-test  dhclient_test  dispatcher-test  general-test  helper-test  ip_test  ipv6-prefix-addr-test  ipv6-prefix-dhclient-test  ipv6-prefix-dhcpcd-test  ipv6-prefix-nm-test  ipv6-prefix-test  nm-ddns-test  nsupdate_test  radvd-test  radvd_test  shtest-test  shtest_setup
test/conf/: 1-ip-mock-addrs  1-radvd.conf  1-radvd.conf.templ  2-ip-mock-addrs  2-radvd.conf.templ  3-radvd.conf.templ  4-ip-mock-addrs  4-radvd.conf  4-radvd.conf.templ  common.conf  common.sh  ddns-br1-from-wan0.conf  ddns-br1-from-wan1.conf  ddns-eth0-from-eth0.conf  ddns-eth0.conf  ddns-eth1.conf  dig-mock-names  general.conf  ip-mock-addrs  ip-mock-monitor  ip-mock-routes  ipv6-prefix-br0-from-wan0.conf  ipv6-prefix-br1-from-wan0.conf  ipv6-prefix-brx-from-wan0.conf  ipv6-prefix-eth3-from-wan0.conf  ipv6-prefix-wan0.conf  ipv6-prefix-wan1.conf  ipv6-prefix-wan2.conf  nm-ddns-br1-from-xxx.conf  nm-ddns-eth0.conf  nm-ddns-wan0.conf  nmcli-mock-values  nmg_xtest  radvd-gen.conf  radvd.conf.templ  shtest_setup  test-ddns.conf  testweb-ddns.conf  xtest_setup
test/expected/: 1-radvd.conf  2-radvd.conf  3-radvd.conf  4-radvd.conf
test/hconf/: general.conf
